--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@vercel/analytics": "^1.0.1",
     "chart.js": "^4.2.1",
     "charts.css": "^0.9.0",
     "eslint": "8.34.0",
